--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Documents</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">All Documents regarding I-40 On Ramp Project are listed below.</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
       </div>
     </div>
@@ -87,6 +87,7 @@
           <div class="featured-text text-center text-lg-left">
             <h4>Shoreline</h4>
             <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <a href="\Homes\NAU\mha239\Desktop\Website\Documents-\pdfs\Synopsis templet - Alshaiban.pdf"><p><strong>Link to PDF</strong></p></a>
           </div>
         </div>
       </div>
@@ -173,7 +174,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">hello@yourdomain.com</a>
+                <a href="mailto:hello@yourdomain.com">hello@yourdomain.com</a>
               </div>
             </div>
           </div>
