--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a class="nav-link js-scroll-trigger" href="https://rlopez15.github.io/ADOT-Capstone/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Project Information</a>
+            <a class="nav-link js-scroll-trigger" href="https://feazachious12.github.io/Info-Page/ ">Project Information</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://mha239.github.io/Documents-/">Documents</a>
@@ -127,7 +127,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <a href="\Homes\NAU\mha239\Desktop\Website\Documents-\pdfs\Synopsis templet - Alshaiban.pdf"><p><h2>CENE 476 Project Schedule</h2></p></a>
+                <a href="\Homes\NAU\mha239\Desktop\Website\Documents-\pdfs\CENE 476 Project Schedule.pdf"><p><h2>CENE 476 Project Schedule</h2></p></a>
 
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
