--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>I-40 On Ramp Project ( Documents)</title>
+  <title>I-40 On Ramp Project Documents</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -108,8 +108,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <a href="Capstone Final Presentation.pdf"><p><h2>CENE 476 Final Presentation</h2></p></a>
-<a href="\Homes\NAU\mha239\Desktop\Website\Documents-\pdfs\Capstone Final Presentation.pdf">CENE 476 Final Presentation</a></p></h4>
+                <a href="\Homes\NAU\mha239\Desktop\Website\Documents-\pdfs\Capstone Final Presentation.pdf"><p><h2>CENE 476 Final Presentation</h2></p></a>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
