--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <a href="\Homes\NAU\mha239\Desktop\Website\Documents-\pdfs\Final Proposal .pdf"><p><h2>CENE 476 Final Proposal</h2></p></a>
+                <a href="\Homes\NAU\mha239\Desktop\Website\Documents-\Final Proposal .pdf"><p><h2>CENE 476 Final Proposal</h2></p></a>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -108,7 +108,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <a href="\Homes\NAU\mha239\Desktop\Website\Documents-\pdfs\Capstone Final Presentation.pdf"><p><h2>CENE 476 Final Presentation</h2></p></a>
+                <a href="\Homes\NAU\mha239\Desktop\Website\Documents-\Capstone Final Presentation.pdf"><p><h2>CENE 476 Final Presentation</h2></p></a>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -124,7 +124,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <a href="\Homes\NAU\mha239\Desktop\Website\Documents-\pdfs\CENE 476 Project Schedule.pdf"><p><h2>CENE 476 Project Schedule</h2></p></a>
+                <a href="\Homes\NAU\mha239\Desktop\Website\Documents-\CENE 476 Project Schedule.pdf"><p><h2>CENE 476 Project Schedule</h2></p></a>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
