--- a/index.html
+++ b/index.html
@@ -134,9 +134,7 @@
       <!-- Project Two Row -->
     </div>
   </section>
-
-  <!-- Signup Section -->
-  <!-- Contact Section -->
+      <!-- Project Two Row -->
   <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
     <div class="col-lg-6">
       <img class="img-fluid" src="img/road-between-autumn-trees-3198924.jpg" alt="">
@@ -152,7 +150,7 @@
       </div>
     </div>
   </div>
-
+      <!-- Project Two Row -->
   <div class="row justify-content-center no-gutters">
     <div class="col-lg-6">
       <img class="img-fluid" src="img/black-road-2790391.jpg" alt="">
