--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
       <!-- Project One Row -->
-      <!-- Project Two Row -->
+
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/top-view-photo-of-curved-road-surrounded-by-trees-1834403.jpg" alt="">
@@ -99,7 +99,7 @@
       </div>
 
 
-
+      <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/road-between-autumn-trees-3198924.jpg" alt="">
@@ -115,7 +115,7 @@
           </div>
         </div>
       </div>
-      <!-- Project Two Row -->
+      <!-- Project Three Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/black-road-2790391.jpg" alt="">
@@ -131,11 +131,10 @@
           </div>
         </div>
       </div>
-      <!-- Project Two Row -->
+
     </div>
   </section>
-  <!-- Project One Row -->
-  <!-- Project Two Row -->
+  <!-- Project Four Row -->
   <div class="row justify-content-center no-gutters">
     <div class="col-lg-6">
       <img class="img-fluid" src="img/top-view-photo-of-curved-road-surrounded-by-trees-1834403.jpg" alt="">
@@ -151,9 +150,7 @@
       </div>
     </div>
   </div>
-
-
-
+  <!-- Project Five Row -->
   <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
     <div class="col-lg-6">
       <img class="img-fluid" src="img/road-between-autumn-trees-3198924.jpg" alt="">
