--- a/index.html
+++ b/index.html
@@ -164,7 +164,38 @@
     </div>
   </div>
 
-
+  <!-- Project Six Row -->
+  <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+    <div class="col-lg-6">
+      <img class="img-fluid" src="img/road-between-autumn-trees-3198924.jpg" alt="">
+    </div>
+    <div class="col-lg-6">
+      <div class="bg-black text-center h-100 project">
+        <div class="d-flex h-100">
+          <div class="project-text w-100 my-auto text-center text-lg-left">
+            <a href="Capstone Final Presentation.pdf"><p><h2>CENE 486C Final Presentation</h2></p></a>
+            <hr class="d-none d-lg-block mb-0 ml-0">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Project Seven Row -->
+  <div class="row justify-content-center no-gutters">
+    <div class="col-lg-6">
+      <img class="img-fluid" src="img/top-view-photo-of-curved-road-surrounded-by-trees-1834403.jpg" alt="">
+    </div>
+    <div class="col-lg-6 order-lg-first">
+      <div class="bg-black text-center h-100 project">
+        <div class="d-flex h-100">
+          <div class="project-text w-100 my-auto text-center text-lg-right">
+            <a href="Final Proposal.pdf"><p><h2>CENE 486C Project Schedule</h2></p></a>
+            <hr class="d-none d-lg-block mb-0 mr-0">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- Project Two Row -->
   <!-- Signup Section -->
   <!-- Contact Section -->
