--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">CENE 476</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">CENE 476 & 486C</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -184,7 +184,7 @@
   <div class="row justify-content-center no-gutters">
     <div class="col-lg-6">
       <img class="img-fluid" src="img/top-view-photo-of-curved-road-surrounded-by-trees-1834403.jpg" alt="">
-    </div>  
+    </div>
     <div class="col-lg-6 order-lg-first">
       <div class="bg-black text-center h-100 project">
         <div class="d-flex h-100">
