--- a/index.html
+++ b/index.html
@@ -115,6 +115,38 @@
           </div>
         </div>
       </div>
+      <!-- Project Two Row -->
+      <div class="row justify-content-center no-gutters">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/top-view-photo-of-curved-road-surrounded-by-trees-1834403.jpg" alt="">
+        </div>
+        <div class="col-lg-6 order-lg-first">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-right">
+                <a href="Final Proposal.pdf"><p><h2>CENE 486C Final Cost Report</h2></p></a>
+                <hr class="d-none d-lg-block mb-0 mr-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Project Two Row -->
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/road-between-autumn-trees-3198924.jpg" alt="">
+        </div>
+        <div class="col-lg-6">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                  <a href="Preliminary-90% Submittal.pdf"><p><h2>CENE 486C Final Plan Set</h2></p></a>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- Project Three Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
@@ -131,38 +163,6 @@
           </div>
         </div>
       </div>
-  <!-- Project Four Row -->
-  <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-    <div class="col-lg-6">
-      <img class="img-fluid" src="img/road-between-autumn-trees-3198924.jpg" alt="">
-    </div>
-    <div class="col-lg-6">
-      <div class="bg-black text-center h-100 project">
-        <div class="d-flex h-100">
-          <div class="project-text w-100 my-auto text-center text-lg-left">
-            <a href="30% Presentation.pdf"><p><h2>CENE 486C 30% Presentation</h2></p></a>
-            <hr class="d-none d-lg-block mb-0 ml-0">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Project Five Row -->
-  <div class="row justify-content-center no-gutters">
-    <div class="col-lg-6">
-      <img class="img-fluid" src="img/top-view-photo-of-curved-road-surrounded-by-trees-1834403.jpg" alt="">
-    </div>
-    <div class="col-lg-6 order-lg-first">
-      <div class="bg-black text-center h-100 project">
-        <div class="d-flex h-100">
-          <div class="project-text w-100 my-auto text-center text-lg-right">
-            <a href="60% Presentation.pdf"><p><h2>CENE 486C 60% Presentation</h2></p></a>
-            <hr class="d-none d-lg-block mb-0 mr-0">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <!-- Project Six Row -->
   <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
