--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <a href="Final Plan S.pdf"><p><h2>CENE 486C Final Plan Set</h2></p></a>
+                <a href="Final Plan Set.pdf"><p><h2>CENE 486C Final Plan Set</h2></p></a>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
