--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <a href="Final Proposal.pdf"><p><h2>CENE 476 Final Proposal</h2></p></a>
+                <a href="Final Proposal.pdf#toolbar=0"><p><h2>CENE 476 Final Proposal</h2></p></a>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -108,7 +108,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <a href="Preliminary-90 Submittal.pdf"><p><h2>CENE 486C Final Report</h2></p></a>
+                  <a href="Preliminary-90 Submittal.pdf#toolbar=0"><p><h2>CENE 486C Final Report</h2></p></a>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -124,7 +124,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <a href="Final Plan Set.pdf"><p><h2>CENE 486C Final Plan Set</h2></p></a>
+                <a href="Final Plan Set.pdf#toolbar=0"><p><h2>CENE 486C Final Plan Set</h2></p></a>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -140,7 +140,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <a href="Capstone Final Presentation.pdf"><p><h2>CENE 476 Final Presentation</h2></p></a>
+                  <a href="Capstone Final Presentation.pdf#toolbar=0"><p><h2>CENE 476 Final Presentation</h2></p></a>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -156,7 +156,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <a href="CENE 486C Final Presentation.pdf"><p><h2>CENE 486C Final Presentation</h2></p></a>
+                <a href="CENE 486C Final Presentation.pdf#toolbar=0"><p><h2>CENE 486C Final Presentation</h2></p></a>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -173,7 +173,7 @@
       <div class="bg-black text-center h-100 project">
         <div class="d-flex h-100">
           <div class="project-text w-100 my-auto text-center text-lg-left">
-            <a href="Final Project Schedule.pdf"><p><h2>CENE 486C Project Schedule</h2></p></a>
+            <a href="Final Project Schedule.pdf#toolbar=0"><p><h2>CENE 486C Project Schedule</h2></p></a>
             <hr class="d-none d-lg-block mb-0 ml-0">
           </div>
         </div>
